--- a/app/src/main/res/layout/activity_book_content.xml
+++ b/app/src/main/res/layout/activity_book_content.xml
@@ -20,7 +20,7 @@
             android:id="@+id/primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="How to draw a full superhero"
+            android:text=""
             android:paddingTop="15dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
